Edited wiki page API_Docs through web user interface.
git-svn-id: http://crunch.googlecode.com/svn@102 c8dd57aa-ad96-7fdf-15b8-99d5455c0426

--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -51,3 +51,7 @@ crnlib exposes a high level, C-style function based API, defined in the single p
       * `crn_get_format_string()`
       * `crn_get_dxt_quality_stringa()`
       * `crn_get_dxt_quality_string()`
+
+Several custom types and parameter structs are also defined in [http://code.google.com/p/crunch/source/browse/trunk/inc/crnlib.h inc/crnlib.h]. The most important structs are:
+  * `struct crn_comp_params`, which contains all the parameters passed to the compression function `crn_compress()`
+  * `struct crn_mipmap_params`, which contains a bunch of parameters that control crnlib's optional mipmap generator.
