--- a/wiki/API_Docs.wiki
+++ b/wiki/API_Docs.wiki
@@ -416,7 +416,7 @@ void crn_free_block_compressor(crn_block_compressor_context_t pContext);
 
 These functions allow the caller to compress 4x4 pixel image blocks to any non-swizzled DXTn format supported by crnlib: DXT1, DXT3, DXT5, DXT5A, DXN_XY and DXN_YX (basically BC1-BC5).
 
-Note that, unlike most other DXTn block compressors crnlib's is stateful, so for efficient usage you should call `crn_create_block_compressor()` to create a state object and reuse it as many times as possible. (If you're curious, the state consists of an endpoint cache, and a bunch of heap blocks used for temporary arrays.) Don't call `crn_create_block_compressor()` once for each block to compress, or performance will be dreadful. 
+Unlike most other DXTn block compressors (such as ATI_Compress or squish) crnlib's is stateful, so for efficient usage you should call `crn_create_block_compressor()` to create a state object and reuse it as many times as possible. (If you're curious, the state consists of an endpoint cache, and a bunch of heap memory used by the compressor for temporary arrays.) Don't call `crn_create_block_compressor()` once for each block to compress, or performance will be dreadful.
 
 crnlib's DXTn endpoint optimizer actually supports any number of source pixels (i.e. from 1 to thousands, not just 16), but for simplicity this API currently only supports 4x4 texel blocks.
 
